Fix scrollbar on the store

--- a/styles/style.css
+++ b/styles/style.css
@@ -33,11 +33,21 @@ div.store-title {
 }
 
 div.buildings,
-div.upgrades {
+div.upgrades,
+div.buildingStore,
+div.upgradeStore {
     display: flex;
     flex-direction: column;
+}
+
+div.buildings,
+div.upgrades {
     flex: 50%;
     height: 50vh;
+}
+
+div.buildingStore,
+div.upgradeStore {
     overflow: auto;
 }
 
@@ -46,6 +56,7 @@ div.buildings {
 }
 
 .button {
+    border-style: none;
     border-bottom: 1px solid black;
     padding: 14px 28px;
     font-size: 1.25em;
